[project]
name = "random-test"
description = "An random test project for publishing."
authors = [
    { name = "Aayushshah196", email = "aayushshah196@gmail.com" }
]
repository = "https://github.com/Aayushshah196/substack-python"
homepage = "https://github.com/Aayushshah196/substack-python"
license = {text = "MIT License"}
keywords = ["random", "test", "random-test"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
# universal = true
managed = true
dev-dependencies = [
    "pre-commit==2.20.0",
    "black==22.10.0",
    "build>=1.2.1",
]

[tool.hatch.version]
source = "code"
path = "src/random-test/__init__.py"
search-paths = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/random-test"]

[tool.rye.scripts]
format = "black ."